2011-01-19  Jeff Johnston  <jjohnstn@redhat.com>

	* src/org/eclipse/linuxtools/changelog/core/tests/ChangeLogWriterTest.java (testWriteChangeLog): Close
	stream when done with it. 
	(canWriteChangeLogToEmptyChangeLogButWithSomeDefaultContent): Ditto. 
	* src/org/eclipse/linuxtools/changelog/tests/fixtures/TestChangeLogTestProject.java (testAddFileToProject): Ditto. 

2011-01-12  Jeff Johnston  <jjohnstn@redhat.com>

	* test.xml: New file.
	* build.properties: Add test.xml.

2011-01-10  Severin Gehwolf  <sgehwolf@redhat.com>

	* META-INF/MANIFEST.MF: Rename org.eclipse.linuxtools.changelog.tests.ui to
	                        org.eclipse.linuxtools.changelog.ui.tests.

2010-12-20  Severin Gehwolf  <sgehwolf@redhat.com>

	* META-INF/MANIFEST.MF: Add Java 6 to list of execution environments.
	* javaCompiler...args: Removed.

2010-12-20  Severin Gehwolf  <sgehwolf@redhat.com>

	* build.xml: New file. Added for build support with upstream eclipse.
	* javaCompiler...args: New file.

2010-12-14  Severin Gehwolf  <sgehwolf@redhat.com>

	* src/org/eclipse/linuxtools/changelog/ui/tests: Package removed.
	* src/org/eclipse/linuxtools/changelog/ui: Removed.

2010-12-14  Severin Gehwolf  <sgehwolf@redhat.com>
   
	* src/log4j.xml: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/ContextMenuHelper.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/ProjectExplorer.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/ProjectExplorerTreeItemAppearsCondition.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/SVNProject.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/SVNProjectCreatedCondition.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/SVNReporsitoriesView.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/TableAppearsCondition.java: Removed.
	* src/org/eclipse/linuxtools/changelog/tests/helpers/TreeItemAppearsCondition.java: Removed.